--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,18 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore Terraform lock files
+.terraform.lock.hcl
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+
+# Kubernetes
+.kube/
+kubeconfig
