--- a/02-services/kubernetes/traefik-dashboard-config.yaml
+++ b/02-services/kubernetes/traefik-dashboard-config.yaml
@@ -8,3 +8,18 @@ spec:
     ingressRoute:
       dashboard:
         enabled: true
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: traefik-dashboard
+  namespace: kube-system
+spec:
+  entryPoints:
+  - web
+  routes:
+  - kind: Rule
+    match: Host(`traefik.local`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+    services:
+    - kind: TraefikService
+      name: api@internal
